parser/src/parser/snapshots/parser__parser__parser__tests__parse_assignment-17.snap
---
source: parser/src/parser/parser.rs
description: a += 1
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        AugAssignStatement(
            AugAssign {
                node: Node {
                    start: 0,
                    end: 6,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 0,
                            end: 1,
                        },
                        id: "a",
                    },
                ),
                op: Add,
                value: Constant(
                    Constant {
                        node: Node {
                            start: 5,
                            end: 6,
                        },
                        value: Int(
                            "1",
                        ),
                    },
                ),
            },
        ),
    ],
}
