parser/src/parser/snapshots/parser__parser__parser__tests__parse_assignment-25.snap
---
source: parser/src/parser/parser.rs
description: a >>= 1
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        AugAssignStatement(
            AugAssign {
                node: Node {
                    start: 0,
                    end: 7,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 0,
                            end: 1,
                        },
                        id: "a",
                    },
                ),
                op: RShift,
                value: Constant(
                    Constant {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        value: Int(
                            "1",
                        ),
                    },
                ),
            },
        ),
    ],
}
