parser/src/parser/snapshots/parser__parser__parser__tests__parse_assignment-6.snap
---
source: parser/src/parser/parser.rs
description: "a = b'1'"
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 8,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                ],
                value: Constant(
                    Constant {
                        node: Node {
                            start: 4,
                            end: 8,
                        },
                        value: Bytes(
                            [
                                49,
                            ],
                        ),
                    },
                ),
            },
        ),
    ],
}
